--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environments
+env/
+
+# Django:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+
